Fix transition mobile navbar

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -1,6 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background-color: $color-neutral-white;
     font-family: $font-family-base;
     color: $color-neutral-dark-blue;
     padding: $padding-global;
+}
+
+@media only screen and (max-width: $size-breakpoint-responsive){
+    body {
+        padding: $padding-global-mobile;
+    }
 }
