--- a/src/styles/base/_variable.scss
+++ b/src/styles/base/_variable.scss
@@ -4,6 +4,7 @@ $width-size-desktop: 1440px;
 $width-size-mobile: 375px;
 
 $padding-global: 5rem 8rem;
+$padding-global-mobile: .5rem 1rem;
 $margin-top-hamburger: 5rem;
 $margin-right-hamburger: 8rem;
 
@@ -21,3 +22,4 @@ $color-neutral-gray-blue:#c5c6ce;
 $color-neutral-dark-gray-blue:#5d5f79;
 $color-neutral-dark-blue: #00001a;
 
+$size-breakpoint-responsive: 1000px;
