--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -22,6 +22,7 @@ nav {
         }
     }
     &.mobile {
+        display: none;
         .navbar {
             width: 100%;
             .nav-container {
@@ -32,7 +33,7 @@ nav {
                 margin: auto;
                 height: 60px;
                 .menu-items {
-                    display: flex;
+                    display: none;
                     flex-direction: column;
                     height: 100vh;
                     width: 100%;
@@ -107,9 +108,13 @@ nav {
                     left: 0;
                     font-size: 1.2rem;
                     color: #0e2431;
+                    z-index: 10;
                 }
             }
             input[type="checkbox"]:checked ~ .menu-items {
+                display: flex;
+                // velocity that's appears the menu when it's clicked
+                transition: transform 0.5s ease-in-out;
                 // until where move the menu since appears
                 transform: translateX(0);
             }
@@ -127,5 +132,17 @@ nav {
             }
         }
         
+    }
+}
+
+@media only screen and (max-width: $size-breakpoint-responsive) {
+
+    nav{
+        &.desktop {
+            display: none;
+        }
+        &.mobile {
+            display: block;
+        } 
     }
 }
